Mon Sep 11 17:48:50 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* OmRefCntPtr updated to deal with conversions between different
	  pointer types.

Mon Sep 11 14:57:42 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Stopped OmDatabase::postlist_{begin,end} from being virtual.

Mon Sep 11 14:00:04 BST 2000 Olly Betts

	* Added .daflimsy, .db, and .dbflimsy to .cvsignore.

Mon Sep 11 13:31:38 BST 2000 Olly Betts

	* Fixed OmTermListIterator so termlist2 test passes.
 
Mon Sep 11 12:28:13 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* If a test fails and leaks, then don't rerun it (ie, only rerun if
	  it passes but leaks)

Mon Sep 11 11:56:29 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented OmIndexerNode::invalidate_outputs()

	* Added new methods get_element() (the same as operator[]) and
	  append_element() to Record.

	* Made the output of operator<<(ostream &, Record) more compact.

Mon Sep 11 11:21:27 BST 2000 Olly Betts

	* Fixed compiler warning in string_to_ommsetitems in non-debug builds.
 
Mon Sep 11 10:28:43 BST 2000 Olly Betts

	* Test suite now exercises flimsy version of da backend, and both
	  heavy duty and flimsy versions of db backend.
 
Fri Sep  8 20:10:06 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix problem with OmPostListIterator's internals not being reference
	  counted, and copy still being allowed; internals are refcnt again,
	  and copy and assignment operations are fully defined.
	  OmTermListIterators and OmPositionListIterators are still broken.

Fri Sep  8 18:42:49 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* In delve, ensure that recno's are in sorted order.

Fri Sep  8 18:41:19 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* In MultiPostList::skip_to(), don't call get_docid() if already
	  at_end().

Fri Sep  8 17:31:28 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
